# seq2seq-t

./: .gitignore  README.md  pyproject.toml
seq2seq/: demo.py  prepare_data.py  train.py
seq2seq/dataset/: en_vocab.pickle  en_vocab_itos5.pickle  en_vocab_stoi5.pickle  test_data.pickle  train_data.pickle  valid_data.pickle  zh_vocab.pickle  zh_vocab_itos5.pickle  zh_vocab_stoi5.pickle
seq2seq/dss/: en_vocab.pickle  zh_vocab.pickle
seq2seq/dss/test/: state.json
seq2seq/dss/train/: dataset_info.json  state.json
seq2seq/dss/valid/: state.json
seq2seq/dsss/test/: state.json
seq2seq/dsss/train/: state.json
seq2seq/dsss/valid/: state.json
seq2seq/nss/test/: state.json
seq2seq/nss/train/: state.json
seq2seq/nss/valid/: state.json
