[tool.poetry]
name = "seq2seq"
version = "0.1.0"
description = ""
authors = ["davy_chen <davych@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.7.4"
torch = "2.2.2"
torchtext = "0.17.2"
datasets = "^2.19.1"
evaluate = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
